# socketsundso

./: .flake8  CHANGES.rst  LICENSE  README.md  foo.py  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: api.rst  concepts.rst  conf.py  foreword.rst  index.rst  tutorial.rst
examples/: chat.py  decorator.py
fastapi_wshandler/: __init__.py  endpoints.py  models.py
scripts/: format.sh  lint.sh
socketsundso/: __init__.py  decorator.py  endpoints.py  handler.py  models.py
tests/: test_decorators.py  test_endpoint.py  test_handler.py  test_response_model.py
wshandler/: endpoints.py  exceptions.py  models.py
