[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "socketsundso"
authors = [{name = "Markus Bach", email = "python@dingensundso.de"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP",
    "Intended Audience :: Developers"
]
dynamic = ["version", "description"]
requires-python = ">=3.10"
dependencies = [
    "fastapi ==0.75.1"
]

[project.urls]
Home = "https://github.com/dingensundso/socketsundso"

[project.optional-dependencies]
dev = [
    "uvicorn[standard] >=0.12.0,<0.16.0",
]
