[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "socketsundso"
authors = [{name = "Markus Bach", email = "python@dingensundso.de"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP",
    "Intended Audience :: Developers"
]
dynamic = ["version", "description"]
requires-python = ">=3.10"
dependencies = [
    "fastapi >=0.75.1"
]

[project.urls]
repository = "https://github.com/dingensundso/socketsundso"
documentation = "https://socketsundso.dingensundso.de/"

[project.optional-dependencies]
dev = [
    "uvicorn[standard] >=0.12.0",
    "flake8 >=3.8.3",
    "mypy >=0.942",
    "autoflake >=1.4.0",
    "black >= 22.3.0",
    "isort >=5.10.0",
    "pytest >=6.2.4",
    "pytest-asyncio >=0.18.0",
    "sphinx >= 4.5.0",
]

[tool.mypy]
# --strict
#disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
# --strict end

[tool.isort]
profile = "black"
known_third_party = ["fastapi", "pydantic", "starlette"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
